# TJR103-Group-1-Project

./: .gitignore  README.md  download_from_mysql.py  flow_chart.drawio  pet_hotel_ETL.csv  public_pet_shelter_hungcw.py  pyproject.toml  requirements_project.txt  requirements專題用.txt  setup.py  six_city_pet_hotels_with_hours.csv  six_city_population.csv  six_city_population_11409.csv
.github/workflows/: cd_deploy.yml
DBMS/: create_table.sql
airflow/: Dockerfile  airflow.cfg  airflow.cfg.bak  docker-compose.yml  requirements.txt
airflow/dags/: T_gmap_full_search.ipynb  d_01-10_compute_m.py  d_01-11_compute_p.py  d_01-12_convenience_score.py  d_01-1_pet_regis_count_daily.py  d_01-2_gmap_full_search_salon.py  d_01-3_gmap_full_search_restaurant.py  d_01-4_gmap_full_search_supplies.py  d_01-5_gmap_info_search_salon.py  d_01-6_gmap_info_search_restaurant.py  d_01-7_gmap_info_search_supplies.py  d_01-8_GCS_sync_and_backup.py  d_01-9_location.py  d_01_pet_regis_count.py  d_02-1_etl_hotel_dag.py  d_03-1_shelter.py  (+19 more)
dags/: etl_hospital_dag.py
data/: .gitkeep  location.csv  six_city_pet_grooming_google.csv  six_city_population_11409.csv  taiwan_pet_shelters_with_google.csv
docs/: coding_style.md  git_document.md  repo_document.md  repo_structure.md  test_cd.md
mods/: GCS_mod.py  config.py  connectDB.py  connect_db.py  database_file_mod.py  date_mod.py  extract_city_district.py  extractdata.py  get_pet_hospital.py  get_pet_hospital_24_hr.py  get_var_data.py  gmap.py  pandas_mod.py  savedata.py  store_to_csv.py  test.py
tool/: gmap.md  map_api_key.txt  tool_document.md
(+339 files in other folders)
